--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -37,6 +37,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-size: 100%;
   vertical-align: baseline;
 }
+#contact {
+  margin-bottom: 1em;
+}
 
 .blue {
 	color: #06C;
